--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -1,6 +1,8 @@
-.container
-	- @jobs.each do |job| 
-		%h2= link_to job.title, job
-		%p= job.company
+#jobs
+	- if @jobs.blank?
+		%h3 No Jobs in this category. Check back soon!
 
-	= link_to "New Job", new_job_path
+	- @jobs.each do |job| 
+		.job
+			%h2= link_to job.title, job
+			%p= job.company
